fix login button spacing issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -80,7 +80,7 @@ a {
         h1 {
             margin: 0.2em 0;
         }
-        #signout {
+        #signout, #signin {
             margin-left: 8px;
         }
         #lights {
